--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.wildfly.swarm</groupId>
-  <artifactId>service-broker</artifactId>
+  <artifactId>jwt-service-broker</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 
   <name>Open Service Broker API Framework Fraction</name>
